--- a/DBADashServiceConfig/InstallService.resx
+++ b/DBADashServiceConfig/InstallService.resx
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
-    Microsoft ResX Schema 
+    Microsoft ResX Schema
 
     Version 2.0
 
@@ -48,7 +48,7 @@
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-    
+
     mimetype: application/x-microsoft.net.object.soap.base64
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
@@ -118,8 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="txtOutput.Text" xml:space="preserve">
-    <value>Choose a Run As option and click Install.  A domain user account is preferred, allowing the use of Windows authentication to connect to your SQL instances.
+    <value>Choose a Run As option and click Install.  
+
+A domain user account is preferred, allowing the use of Windows authentication to connect to your SQL instances.  A managed service account is a great option.
+
+Click the link below for help creating a service account.
+
 Enter the username in domain\username format when prompted.  Leave password blank if using a managed service account.
+
+The service account will need access to the repository database and monitored instances.  You can use the permissions helper to provision access.
+See: https://dbadash.com/docs/help/security/ for more info.
 
 DBA Dash can be installed via the command line if you prefer.  
 e.g.
